--- a/Random Users/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Random Users/Views/Storyboards/Base.lproj/Main.storyboard
@@ -17,24 +17,33 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" id="hB2-k0-brg">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.5"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="44" id="hB2-k0-brg">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hB2-k0-brg" id="iPe-cl-G2M">
-                                    <rect key="frame" x="0.0" y="0.0" width="348" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="348" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BtZ-0w-ia4">
-                                            <rect key="frame" x="0.0" y="0.0" width="43.5" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="BtZ-0w-ia4" secondAttribute="height" multiplier="1:1" id="n96-Y1-Y8u"/>
                                             </constraints>
                                         </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v26-Z2-TU8">
+                                            <rect key="frame" x="50" y="11.5" width="284" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="BtZ-0w-ia4" firstAttribute="leading" secondItem="iPe-cl-G2M" secondAttribute="leading" id="HE9-FH-7f9"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="v26-Z2-TU8" secondAttribute="trailing" constant="6" id="RvK-xy-bZN"/>
+                                        <constraint firstItem="v26-Z2-TU8" firstAttribute="centerY" secondItem="iPe-cl-G2M" secondAttribute="centerY" id="bey-st-9Vg"/>
                                         <constraint firstItem="BtZ-0w-ia4" firstAttribute="top" secondItem="iPe-cl-G2M" secondAttribute="top" id="e10-Nw-F4O"/>
                                         <constraint firstAttribute="bottom" secondItem="BtZ-0w-ia4" secondAttribute="bottom" id="jAb-6d-rUK"/>
+                                        <constraint firstItem="v26-Z2-TU8" firstAttribute="leading" secondItem="BtZ-0w-ia4" secondAttribute="trailing" constant="6" id="sga-YS-Lsg"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
