--- a/Random Users/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Random Users/Views/Storyboards/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Users-->
         <scene sceneID="RKh-me-WHz">
             <objects>
                 <tableViewController id="Ozx-UV-mbH" sceneMemberID="viewController">
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="44" id="hB2-k0-brg">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="44" id="hB2-k0-brg" customClass="UserTableViewCell" customModule="Random_Users" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hB2-k0-brg" id="iPe-cl-G2M">
@@ -47,6 +47,8 @@
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="userImageView" destination="BtZ-0w-ia4" id="Lut-78-4O0"/>
+                                    <outlet property="userNameLabel" destination="v26-Z2-TU8" id="sDx-Te-qb7"/>
                                     <segue destination="7d4-lD-En3" kind="show" identifier="UserDetailSegue" id="4AX-cV-jqQ"/>
                                 </connections>
                             </tableViewCell>
@@ -56,7 +58,7 @@
                             <outlet property="delegate" destination="Ozx-UV-mbH" id="3Tv-LS-7fp"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="0bf-mS-Cxg"/>
+                    <navigationItem key="navigationItem" title="Users" largeTitleDisplayMode="never" id="0bf-mS-Cxg"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hI0-iK-0x1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
